; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_importance.c_ipc_importance_reset.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_importance.c_ipc_importance_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IIT_NULL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipc_importance_reset(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* @IIT_NULL, align 8
  %6 = load i64, i64* %3, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %15

9:                                                ; preds = %2
  %10 = call i32 (...) @ipc_importance_lock()
  %11 = load i64, i64* %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @ipc_importance_reset_locked(i64 %11, i32 %12)
  %14 = call i32 (...) @ipc_importance_unlock()
  br label %15

15:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @ipc_importance_lock(...) #1

declare dso_local i32 @ipc_importance_reset_locked(i64, i32) #1

declare dso_local i32 @ipc_importance_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
